--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -3,10 +3,10 @@ name: Android Publish Lib
 on:
   push:
     branches:
-      - 'master/**'
+      - 'master'
   pull_request:
     branches:
-      - 'master/**'
+      - 'master'
 
 jobs:
   build_Test_and_publish:
