--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -13,12 +13,15 @@ on:
 jobs:
   build_Test_and_publish:
 
+    name: Build and publish
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v5
+
     - name: set up JDK 11
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v5
       with:
         java-version: '11'
         distribution: 'temurin'
