--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -19,13 +19,19 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
+      with:
+        fetch-depth: 0
 
-    - name: set up JDK 11
+    - name: ☕ Set up JDK 17
       uses: actions/setup-java@v5
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
+
+    - name: 🤖 Setup Android SDK
+      uses: android-actions/setup-android@v3
+
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
