--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -17,26 +17,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v5
-      with:
-        fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
-    - name: ☕ Set up JDK 17
-      uses: actions/setup-java@v5
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+      - name: ☕ Set up JDK 17
+        uses: actions/setup-java@v5
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
-    - name: 🤖 Setup Android SDK
-      uses: android-actions/setup-android@v3
+      - name: 🤖 Setup Android SDK
+        uses: android-actions/setup-android@v3
 
-    - name: 📦 Build Debug AAR
-      run: ./gradlew :core:assembleDebugAar
+      - name: 📦 Build Debug AAR
+        run: ./gradlew :core:assembleDebugAar
 
+      - name: ⬆️ Upload Debug AAR
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: core-debug.aar
+          path: ./core/build/outputs/aar/core-debug.aar
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
