--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -52,7 +52,7 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: core-debug.aar
+          name: core-release.aar
           path: ./core/build/outputs/aar/core-release.aar
 
 
