--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -17,23 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-
-      - name: ☕ Set up JDK 17
-        uses: actions/setup-java@v5
+      - name: Setup Android Environment and permission
+        uses: ./.github/actions/setup-android
         with:
           java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: 🤖 Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
 
       - name: 📦 Build Debug AAR
         run: ./gradlew :core:assembleDebug
