--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -29,25 +29,10 @@ jobs:
         with:
           java-version: '17'
 
-      - name: 📦 Build Debug AAR
-        run: ./gradlew :core:assembleDebug
-
-      - name: ⬆️ Upload Debug AAR
-        if: success()
-        uses: actions/upload-artifact@v4
+      - name: Build AAR LIB Debug and Release
+        uses: ./.github/actions/aar-lib-version
         with:
-          name: core-debug.aar
-          path: ./core/build/outputs/aar/core-debug.aar
-
-      - name: 📦 Build Release AAR
-        run: ./gradlew :core:assembleRelease
-
-      - name: ⬆️ Upload Release AAR
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: core-release.aar
-          path: ./core/build/outputs/aar/core-release.aar
+          java-version: '17'
 
 
       - name: Build with Gradle
