CI(Test): test CI 11 Check Code

--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -17,12 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
 
       - name: Setup Android Environment and permission
         uses: ./.github/actions/setup-android
@@ -34,6 +32,8 @@ jobs:
         with:
           java-version: '17'
 
+      - name: Check Code Quality
+        uses: ./.github/actions/check-code
 
       - name: Build with Gradle
         run: ./gradlew build
