CI(Test): test CI 12 Check Code

--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -22,6 +22,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        shell: bash
+
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
       - name: Setup Android Environment and permission
         uses: ./.github/actions/setup-android
         with:
@@ -35,5 +44,3 @@ jobs:
       - name: Check Code Quality
         uses: ./.github/actions/check-code
 
-      - name: Build with Gradle
-        run: ./gradlew build
