--- a/.github/workflows/check-code-quality.yaml
+++ b/.github/workflows/check-code-quality.yaml
@@ -1,44 +1,13 @@
-name: Android Publish Lib
+name: Code Quality Checks
 
 on:
-  push:
-    branches:
-      - 'master'
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
-  pull_request:
-    branches:
-      - 'master'
+  workflow_call:
 
 jobs:
-  build_Test_and_publish:
-
-    name: Build and publish
+  lint_check:
+    name: Android Lint Check
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code an permission for gradlew
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-        shell: bash
-
-      - name: Setup Android Environment and permission
-        uses: ./.github/actions/setup-android
-        with:
-          java-version: '17'
-
-      - name: Build AAR LIB Debug and Release
-        uses: ./.github/actions/aar-lib-version
-        with:
-          java-version: '17'
-  code_quality_check:
-    name: Code Quality Check
-    runs-on: ubuntu-latest
-    needs: build_Test_and_publish
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -54,7 +23,27 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Check Code Quality
+      - name: Check Code Quality lINT
         uses: ./.github/actions/check-code/lint
 
+  klint_check:
+    name: Android Klint Check
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        shell: bash
+
+      - name: Setup Android Environment and permission
+        uses: ./.github/actions/setup-android
+        with:
+          java-version: '17'
+
+      - name: Check Code Quality Klint
+        uses: ./.github/actions/check-code/ktlint
