--- a/.github/workflows/android-publish-lib.yml
+++ b/.github/workflows/android-publish-lib.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           java-version: '17'
   lint_quality_check:
-    name: Code Quality Check
+    name: Lint Quality Check
     runs-on: ubuntu-latest
     needs: build_Test_and_publish
     steps:
@@ -58,7 +58,7 @@ jobs:
         uses: ./.github/actions/check-code/lint
 
   ktlin_quality_check:
-    name: Code Quality Check
+    name: KtLint Quality Check
     runs-on: ubuntu-latest
     needs: build_Test_and_publish
     steps:
